# rust-smsgate

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 0001_init.sql  0002_dedupe_received_messages.sql
backend/src/: app_error.rs  auth.rs  config.rs  crypto.rs  main.rs  models.rs  realtime.rs  state.rs
backend/src/routes/: auth.rs  diagnostics.rs  messages.rs  mod.rs  settings.rs  webhooks.rs  ws.rs
deploy/: README.md  nginx.conf.example  smsgate-backend.service.example
frontend/: .env.production.example  CAPACITOR_NOTES.md  index.html  package-lock.json  package.json
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: api.ts  main.tsx  styles.css  types.ts
