[package]
name = "smsgate-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "smsgate-backend"
path = "src/main.rs"

[[bin]]
name = "hash-password"
path = "src/bin/hash-password.rs"

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
axum = { version = "0.8.9", features = ["macros", "ws"] }
base64 = "0.22"
bcrypt = "0.16"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
jsonwebtoken = "9"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
